# forge-persist

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.csv  benchmark.md  benchmark_persist.csv  foundry.toml  run_bench.sh  run_bench_v2.sh
.github/workflows/: deploy-docs.yml
.hypothesis/examples/6ff5a21972b119c2/: 26e5e04ab71edfb1  3f6f450ab7458a37  422b3d7a6637004e  95018661c6a1adfa  9f4db11120d3f450  a916def4d6f75811  f9ff54d39382a552
.hypothesis/examples/9c124f0e81593422/: 001bc8670e8e7a00  0194d8092117144e  175aae1a8ec305cf  1a132836e7a283ed  1cb111f2063c8fe3  2563a43f962a6351  2a3c3bdac690d546  2c140b0f06807f25  3029a4bbe5972f00  38682be1469aff7c  39ad28b1cc568bce  3a1543d1480d280e  438cb60b9535cfae  45672eb40bdf365e  7d335fbb48bf6463  7e0fe3f767a5711e  8381939570d78cd6  87860c4cf8f57ae1  888d869339f9497a  8a7f4629ff618829  8baaf3ed6f0f61bf  9c814dd29ed3616b  9cf68bb8dd06ec57  a48b6768d385874e  a712c03ac450df64  ac809fcd303ac3b2  b167d062e45604db  b9ea84d17ca6fade  c0c2e5a48e3ece48  c3b38502f41029e4  c738c8ca9401eb99  c83e48b7e052bac2  cbd30395c39a891b  ce3606735a07550b  d7f817f35d957a38  e06cec3027e7ff97  e5212ebdad5ac317  e951097218526e73  eb2a1809658c687e  fe1918f04c26d0f3  (+1 more)
broadcast/StressTest.s.sol/31337/: run-1773855103154.json
cache/: solidity-files-cache.json
cache/StressTest.s.sol/31337/: run-1773854365753.json  run-latest.json
docs/: index.md
docs/.vitepress/: config.mts
script/: StressTest.s.sol
src/: convert.rs  main.rs
tasks/: lessons.md  todo.md
tests/: cli.rs
