[package]
name = "forge-persist"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/leooos33/forge-persist"

[dependencies]
# CLI & UX
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async & Process
tokio = { version = "1.37", features = ["full"] }
nix = { version = "0.28", features = ["process", "signal"] }
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"

# Web3/RPC
alloy = { version = "0.1", features = ["full", "providers", "rpc-client"] }
hex = "0.4"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.19.1"
ci = ["github"]
installers = ["shell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
